# Restaurant-Data-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-dags.yml  terraform-apply.yml
airflow/dags/: real_time_pricing.py  restaurant_daily_operations.py
airflow/dags/utils/: alert_handlers.py  iceberg_helpers.py  snowflake_helpers.py
airflow/tests/dags/: test_dag_integrity.py
data-quality/soda/checks/: kitchen_telemetry.yml
docs/: architecture.md
docs/runbooks/: incident-response.md
iceberg/maintenance/: compaction_job.py  expire_snapshots.py
iceberg/schemas/: bronze.yaml
infrastructure/terraform/environments/dev/: main.tf
infrastructure/terraform/modules/iam/: roles.tf  variables.tf
infrastructure/terraform/modules/iceberg/: s3_buckets.tf
scripts/setup/: init_iceberg.py
snowflake/schemas/gold/: kitchen_efficiency.sql
snowflake/security/: row_access_policies.sql
