[project]
name = "restaurant-data-platform"
version = "1.0.0"
description = "Enterprise restaurant data platform: Snowflake + Iceberg + Airflow + IAM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    "apache-airflow[amazon,snowflake,celery]==2.8.1",
    "apache-airflow-providers-snowflake==5.3.0",
    "apache-airflow-providers-amazon==8.9.0",
    "pyiceberg[glue,pyarrow,s3]==0.6.0",
    "snowflake-connector-python[pandas]==3.7.0",
    "snowflake-sqlalchemy==1.5.0",
    "boto3==1.34.0",
    "pandas==2.1.4",
    "pyarrow==14.0.1",
    "great-expectations==0.18.8",
    "soda-core-snowflake==3.0.47",
    "presidio-analyzer==2.2.355",
    "presidio-anonymizer==2.2.355",
    "pydantic==2.5.0",
    "structlog==23.2.0",
    "confluent-kafka==2.3.0",
    "requests==2.31.0",
    "tenacity==8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "black==23.12.0",
    "ruff==0.1.8",
    "mypy==1.7.1",
    "pre-commit==3.6.0",
    "moto[s3,iam,glue]==4.2.14",
]

ml = [
    "tensorflow==2.15.0",
    "scikit-learn==1.3.2",
    "xgboost==2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["airflow/tests", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=airflow --cov-report=html --cov-report=term-missing"
